# rust-editor

./: .cz.toml  .gitignore  Cargo.toml  README.md  runcc.yml
crates/components/: Cargo.toml
crates/components/src/: default_message_modal.rs  lib.rs  selectable_label.rs
crates/hotreload/: Cargo.toml
crates/hotreload/src/: main.rs
crates/image/: Cargo.toml
crates/image/src/: lib.rs
crates/layout/: Cargo.toml
crates/layout/src/: lib.rs
crates/main/: Cargo.toml
crates/main/src/: file_menu.rs  file_store.rs  file_utils.rs  lib.rs  syntax_highlighter.rs
crates/theme/: Cargo.toml
crates/theme/src/: lib.rs
doc/: command-reference.md  development-dependencies.md
doc/architecture/decisions/: 0002-adopt-a-rust-ui-library.md  0003-adopt-commitizen.md
lib/: Cargo.toml
lib/src/: file_list.rs  file_menu.rs  file_store.rs  file_tree.rs  file_utils.rs  image_utils.rs  layout_utils.rs  lib.rs  syntax_highlighter.rs  theme.rs
lib/src/components/: mod.rs  open_folder_card.rs  selectable_label.rs
src/: main.rs  themes.rs
trials/: lib.rs  window.rs
