[package]
name = "lib"
edition = "2021"

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
cached = "0.49.0"
eframe = "0.25.0"
egui = "0.25.0"
lazy_static = "1.4.0"
rfd = "0.13.0"
tokio = { version = "1.36.0", features = ["rt", "fs"] }
tree-sitter = "0.21.0"
tree-sitter-highlight = "0.20.1"
tree-sitter-html = "0.20.0"
tree-sitter-typescript = "0.20.5"
tree-sitter-javascript = "0.20.3"
tree-sitter-json = "0.20.2"
egui_extras = "0.25.0"



