[package]
name = "lib"
edition = "2021"

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
cached = "0.49.0"
debounce = "0.2.2"
eframe = "0.28.0"
egui = { version = "0.28.0", features = ["color-hex"] }
memoize = "0.4.2"
timed-debouncer = "0.1.0"
lazy_static = "1.4.0"
parking_lot = "0.11"
rfd = "0.13.0"
tree-sitter = "0.22.6"
tree-sitter-highlight = "0.22.6"
tree-sitter-html = "0.20.3"
tree-sitter-typescript = "0.21.1"
tree-sitter-javascript = "0.21.3"
tree-sitter-json = "0.21.0"
egui_extras = { version = "0.28.0", features = ["all_loaders"] }
image = { version = "0.25.1", features = ["png"] }

