[package]
name = "main"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "dylib"]

[features]
default = []
reload = ["dep:hot-lib-reloader"]

[dependencies]
cached = "0.49.0"
eframe = { workspace = true }
lazy_static = { workspace = true }
components.workspace = true
layout.workspace = true
theme.workspace = true
hot-lib-reloader = { workspace = true, optional = true }
egui = { workspace = true }
egui_extras = { workspace = true }
memoize = "0.4.2"
rfd = "0.13.0"
tree-sitter = "0.22.6"
tree-sitter-highlight = "0.22.6"
tree-sitter-html = "0.20.3"
tree-sitter-typescript = "0.21.1"
tree-sitter-javascript = "0.21.3"
tree-sitter-json = "0.21.0"
image = { version = "0.25.1", features = ["png"] }

